feat: add section hero

--- a/index.html
+++ b/index.html
@@ -56,13 +56,21 @@
         <div class="header__main-search-content">
           <img src="./assets/img/png/logo.png" alt="logo" class="img-logo">
           <button class="button header__button-menu">
-              <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg" class="img-button">
-                <path d="M0 2C0 0.895428 0.895431 0 2 0H4.22222C5.32679 0 6.22222 0.895431 6.22222 2V6.22222H2C0.895428 6.22222 0 5.32679 0 4.22222V2Z" fill="white"/>
-                <path d="M7.77783 2C7.77783 0.895428 8.67326 0 9.77783 0H12.0001C13.1046 0 14.0001 0.895431 14.0001 2V4.22222C14.0001 5.32679 13.1046 6.22222 12.0001 6.22222H7.77783V2Z" fill="white"/>
-                <path d="M7.77783 7.77832H12.0001C13.1046 7.77832 14.0001 8.67375 14.0001 9.77832V12.0005C14.0001 13.1051 13.1046 14.0005 12.0001 14.0005H9.77783C8.67326 14.0005 7.77783 13.1051 7.77783 12.0005V7.77832Z" fill="white"/>
-                <path d="M0 9.77832C0 8.67375 0.895431 7.77832 2 7.77832H6.22222V12.0005C6.22222 13.1051 5.32679 14.0005 4.22222 14.0005H2C0.895428 14.0005 0 13.1051 0 12.0005V9.77832Z" fill="white"/>
-                </svg>
-              <span class="button-text">Меню</span>
+            <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg" class="img-button">
+              <path
+                d="M0 2C0 0.895428 0.895431 0 2 0H4.22222C5.32679 0 6.22222 0.895431 6.22222 2V6.22222H2C0.895428 6.22222 0 5.32679 0 4.22222V2Z"
+                fill="white" />
+              <path
+                d="M7.77783 2C7.77783 0.895428 8.67326 0 9.77783 0H12.0001C13.1046 0 14.0001 0.895431 14.0001 2V4.22222C14.0001 5.32679 13.1046 6.22222 12.0001 6.22222H7.77783V2Z"
+                fill="white" />
+              <path
+                d="M7.77783 7.77832H12.0001C13.1046 7.77832 14.0001 8.67375 14.0001 9.77832V12.0005C14.0001 13.1051 13.1046 14.0005 12.0001 14.0005H9.77783C8.67326 14.0005 7.77783 13.1051 7.77783 12.0005V7.77832Z"
+                fill="white" />
+              <path
+                d="M0 9.77832C0 8.67375 0.895431 7.77832 2 7.77832H6.22222V12.0005C6.22222 13.1051 5.32679 14.0005 4.22222 14.0005H2C0.895428 14.0005 0 13.1051 0 12.0005V9.77832Z"
+                fill="white" />
+            </svg>
+            <span class="button-text">Меню</span>
           </button>
           <input type="text" class="input input-header" placeholder="Что будем искать?">
           <div class="wrapper_iconSearch">
@@ -86,6 +94,23 @@
       </div>
     </div>
   </header>
+  <main class="main">
+    <section class="hero">
+      <div class="container hero__container">
+        <div class="hero__content">
+          <h1 class="hero__title">BELONI - кухни по вашему рецепту</h1>
+          <ul class="hero__service-list">
+            <li class="hero__service-item">Замеряем с максимальной точностью и соблюдаем все размеры при
+              производстве</li>
+            <li class="hero__service-item">Соблюдаем сроки</li>
+            <li class="hero__service-item">Детально консультируем заказчиков по выбору материалов</li>
+            <li class="hero__service-item">Разрабатываем наглядную визуализацию под каждый проект</li>
+          </ul>
+          <button class="button hero__button">Перейти в каталог</button>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer class="footer">
     <div class="container footer__container">
       <div class="footer__main-grid">
