--- a/index.html
+++ b/index.html
@@ -108,6 +108,33 @@
           </ul>
           <button class="button hero__button">Перейти в каталог</button>
         </div>
+        <div class="wrapper__carousel">
+          <!-- <div class="container carousel__container"> -->
+            <ul class="carousel__cards">
+              <li class="carousel__card">
+                <div class="wrapper__text">
+                <img src="./assets/img/png/sideKitchen.png" class="card__background card__background-sideKitchen" alt="img side kitchen">
+                  <p class="card__title">Каталог кухонь</p>
+                </div>
+                <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon" alt="icon arrow"></button>
+              </li>
+              <li class="carousel__card">
+                <img src="./assets/img/png/chair.png" class="card__background" alt="img chair">
+                <div class="wrapper__text">
+                  <p class="card__title">Мебель для дома</p>
+                </div>
+                <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon" alt="icon arrow"></button>
+              </li>
+              <li class="carousel__card">
+                <img src="./assets/img/png/doors.png" class="card__background" alt="img doors">
+                <div class="wrapper__text">
+                  <p class="card__title">Материалы и комплектующие</p>
+                </div>
+                <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon" alt="icon arrow"></button>
+              </li>
+            </ul>
+          </div>
+        <!-- </div> -->
       </div>
     </section>
   </main>
