feat:add section workxample

--- a/index.html
+++ b/index.html
@@ -109,32 +109,101 @@
           <button class="button hero__button">Перейти в каталог</button>
         </div>
         <div class="wrapper__carousel">
-          <!-- <div class="container carousel__container"> -->
-            <ul class="carousel__cards">
-              <li class="carousel__card">
-                <div class="wrapper__text">
-                <img src="./assets/img/png/sideKitchen.png" class="card__background card__background-sideKitchen" alt="img side kitchen">
-                  <p class="card__title">Каталог кухонь</p>
+          <ul class="carousel__cards">
+            <li class="carousel__card">
+              <div class="wrapper__text">
+                <img src="./assets/img/png/sideKitchen.png" class="card__background card__background-sideKitchen"
+                  alt="img side kitchen">
+                <p class="card__title">Каталог кухонь</p>
+              </div>
+              <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
+                  alt="icon arrow"></button>
+            </li>
+            <li class="carousel__card">
+              <img src="./assets/img/png/chair.png" class="card__background" alt="img chair">
+              <div class="wrapper__text">
+                <p class="card__title">Мебель для дома</p>
+              </div>
+              <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
+                  alt="icon arrow"></button>
+            </li>
+            <li class="carousel__card">
+              <img src="./assets/img/png/doors.png" class="card__background" alt="img doors">
+              <div class="wrapper__text">
+                <p class="card__title">Материалы и комплектующие</p>
+              </div>
+              <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
+                  alt="icon arrow"></button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="workExamples">
+      <div class="container workExamples__container">
+        <h2 class="workExamples__title">Примеры наших работ</h2>
+        <div class="wrapper__carousel-work">
+          <ul class="workExamples__cards">
+            <li class="workExamples__card">
+              <img src="./assets/img/png/whiteKitchen.png" class="workExamples__card-img" alt="white kitchen">
+              <p class="workExamples__card-description">Кухня с белыми рифлёными фасадами</p>
+              <div class="workExamples__card-pricing">
+                <div class="cost__block">
+                  <p class="cost__block-desc">Цена</p>
+                  <p class="cost__block-text">от <span class="cost__block-number">665 180</span> руб.</p>
                 </div>
-                <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon" alt="icon arrow"></button>
-              </li>
-              <li class="carousel__card">
-                <img src="./assets/img/png/chair.png" class="card__background" alt="img chair">
-                <div class="wrapper__text">
-                  <p class="card__title">Мебель для дома</p>
+                <div class="workExamples__card-buttons">
+                  <button class="button workExamples__calculate">Расчет стоимости</button>
+                  <button class="button workExamples__order">Заказать</button>
                 </div>
-                <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon" alt="icon arrow"></button>
-              </li>
-              <li class="carousel__card">
-                <img src="./assets/img/png/doors.png" class="card__background" alt="img doors">
-                <div class="wrapper__text">
-                  <p class="card__title">Материалы и комплектующие</p>
+              </div>
+            </li>
+            <li class="workExamples__card">
+              <img src="./assets/img/png/whiteKitchen.png" class="workExamples__card-img" alt="white kitchen">
+              <p class="workExamples__card-description">Кухня с белыми рифлёными фасадами</p>
+              <div class="workExamples__card-pricing">
+                <div class="cost__block">
+                  <p class="cost__block-desc">Цена</p>
+                  <p class="cost__block-text">от <span class="cost__block-number">665 180</span> руб.</p>
                 </div>
-                <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon" alt="icon arrow"></button>
-              </li>
-            </ul>
-          </div>
-        <!-- </div> -->
+                <div class="workExamples__card-buttons">
+                  <button class="button workExamples__calculate">Расчет стоимости</button>
+                  <button class="button workExamples__order">Заказать</button>
+                </div>
+              </div>
+            </li>
+            <li class="workExamples__card">
+              <img src="./assets/img/png/whiteKitchen.png" class="workExamples__card-img" alt="white kitchen">
+              <p class="workExamples__card-description">Кухня с белыми рифлёными фасадами</p>
+              <div class="workExamples__card-pricing">
+                <div class="cost__block">
+                  <p class="cost__block-desc">Цена</p>
+                  <p class="cost__block-text">от <span class="cost__block-number">665 180</span> руб.</p>
+                </div>
+                <div class="workExamples__card-buttons">
+                  <button class="button workExamples__calculate">Расчет стоимости</button>
+                  <button class="button workExamples__order">Заказать</button>
+                </div>
+              </div>
+            </li>
+            <li class="workExamples__card">
+              <img src="./assets/img/png/whiteKitchen.png" class="workExamples__card-img" alt="white kitchen">
+              <p class="workExamples__card-description">Кухня с белыми рифлёными фасадами</p>
+              <div class="workExamples__card-pricing">
+                <div class="cost__block">
+                  <p class="cost__block-desc">Цена</p>
+                  <p class="cost__block-text">от <span class="cost__block-number">665 180</span> руб.</p>
+                </div>
+                <div class="workExamples__card-buttons">
+                  <button class="button workExamples__calculate">Расчет стоимости</button>
+                  <button class="button workExamples__order">Заказать</button>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <button class="button workExamples__button">Показать еще</button>
       </div>
     </section>
   </main>
@@ -150,7 +219,6 @@
           <input type="text" class="input footer__input" placeholder="E-mail">
           <button class="button footer__button"><img src="./assets/img/svg/Arrow.svg" class="arrow footer__arrow"
               alt="button arrow"></button>
-
         </div>
         <div class="footer__contacts">
           <div class="footer__contacts-phone">
