feat: add ready kitchen section

--- a/index.html
+++ b/index.html
@@ -206,6 +206,51 @@
         <button class="button workExamples__button">Показать еще</button>
       </div>
     </section>
+    <section class="readyKitchen">
+      <div class="container readyKitchen__container">
+        <div class="readyKitchen__content">
+          <button class="button discount__button">
+            Экономия до 100 000 ₽!
+          </button>
+          <div class="readyKitchen__wrapper-text">
+            <h2 class="readyKitchen__title">Готовые кухни из салонов Beloni со скидкой!</h2>
+            <p class="readyKitchen__slogan">Приехал - Выбрал - Забрал!
+            </p>
+          </div>
+          <button class="button readyKitchen__button">Подробнее</button>
+        </div>
+        <div class="wrapper__carousel">
+          <ul class="carousel__cards readyKitchen-cards">
+            <li class="carousel__card readyKitchen-card carousel__card-creamy ">
+              <!-- <div class="wrapper__text"> -->
+                <img src="./assets/img/png/goldDrops.png" class="card__background card__background-readyKitchen"
+                  alt="gold drops">
+                <p class="card__title-readyKitchen">Рассрочка и кредит</p>
+              <!-- </div> -->
+              <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
+                  alt="icon arrow"></button>
+            </li>
+            <li class="carousel__card readyKitchen-card carousel__card-grey-sky">
+              <img src="./assets/img/png/cornerKitchen.png" class="card__background card__background-readyKitchen" alt="corner kitchen">
+              <!-- <div class="wrapper__text"> -->
+                <p class="card__title-readyKitchen">Бесплатный 3D-проект </p>
+              <!-- </div> -->
+              <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
+                  alt="icon arrow"></button>
+            </li>
+            <li class="carousel__card readyKitchen-card carousel__card-creamy-beige">
+              <img src="./assets/img/png/present.png" class="card__background card__background-readyKitchen" alt="present">
+              <!-- <div class="wrapper__text"> -->
+                <p class="card__title-readyKitchen">Подарки 
+                  клиентам</p>
+              <!-- </div> -->
+              <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
+                  alt="icon arrow"></button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container footer__container">
