feat: add about us html and start css

--- a/index.html
+++ b/index.html
@@ -223,32 +223,99 @@
           <ul class="carousel__cards readyKitchen-cards">
             <li class="carousel__card readyKitchen-card carousel__card-creamy ">
               <!-- <div class="wrapper__text"> -->
-                <img src="./assets/img/png/goldDrops.png" class="card__background card__background-readyKitchen"
-                  alt="gold drops">
-                <p class="card__title-readyKitchen">Рассрочка и кредит</p>
+              <img src="./assets/img/png/goldDrops.png" class="card__background card__background-readyKitchen"
+                alt="gold drops">
+              <p class="card__title-readyKitchen">Рассрочка и кредит</p>
               <!-- </div> -->
               <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
                   alt="icon arrow"></button>
             </li>
             <li class="carousel__card readyKitchen-card carousel__card-grey-sky">
-              <img src="./assets/img/png/cornerKitchen.png" class="card__background card__background-readyKitchen" alt="corner kitchen">
+              <img src="./assets/img/png/cornerKitchen.png" class="card__background card__background-readyKitchen"
+                alt="corner kitchen">
               <!-- <div class="wrapper__text"> -->
-                <p class="card__title-readyKitchen">Бесплатный 3D-проект </p>
+              <p class="card__title-readyKitchen">Бесплатный 3D-проект </p>
               <!-- </div> -->
               <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
                   alt="icon arrow"></button>
             </li>
             <li class="carousel__card readyKitchen-card carousel__card-creamy-beige">
-              <img src="./assets/img/png/present.png" class="card__background card__background-readyKitchen" alt="present">
+              <img src="./assets/img/png/present.png" class="card__background card__background-readyKitchen"
+                alt="present">
               <!-- <div class="wrapper__text"> -->
-                <p class="card__title-readyKitchen">Подарки 
-                  клиентам</p>
+              <p class="card__title-readyKitchen">Подарки
+                клиентам</p>
               <!-- </div> -->
               <button class="button card__button"><img src="./assets/img/svg/Arrow.svg" class="img-icon"
                   alt="icon arrow"></button>
             </li>
           </ul>
         </div>
+      </div>
+    </section>
+    <section class="aboutUs">
+      <div class="container aboutUs__container">
+        <h4 class="aboutUs__title">
+          О нас
+        </h4>
+        <div class="aboutUs__main">
+          <img src="./assets/img/png/shelves.png" class="aboutUs__main-img" alt="shelves">
+          <div class="aboutUs__wrapper-desc">
+            <img src="./assets/img/png/logo2.png" class="aboutUs__logo" alt="logo">
+            <div class="aboutUs__wrapper-text">
+              <p class="aboutUs__tagline">Мы рады видеть Вас на нашем сайте. Хотим рассказать Вам немного про нашу компанию</p>
+              <p class="aboutUs__tagline">Мы официальный представитель белорусских фабрик «Elegrum»,»Pan-Fasad»,»ЗОВ-Древ»,
+                «Термопрофиль»,»ЗОВ-фасад»,»ЗОВ-Спектр».</p>
+              <p class="aboutUs__tagline">Кухни на заказ Беларуси уже стал брендом сами по себе, ведь всем понятны преимущества: цена —
+                доступная, качество — высокое. Тому доказательство — отзывы наших покупателей, которые говорят: «Ваши
+                кухни выглядят намного дороже, чем стоят!».</p>
+              <p class="aboutUs__tagline">Мы уверены в фабриках, с которыми работаем, и за такое продолжительное время стали настоящими фанатами
+                своего дела.</p>
+              <p class="aboutUs__tagline">
+                Миссия команды «BELONI» — дать каждому возможность покупать по-настоящему качественные вещи! Мы всегда
+                будем ответственны за ход исполнения Вашего заказа и останемся для Вас друзьями даже после окончания
+                гарантийного срока:)</p>
+            </div>
+          </div>
+        </div>
+        <ul class="aboutUs__slogans-list ">
+          <li class="aboutUs__slogan-item aboutUs__slogan">
+            <div class="aboutUs__slogan-num">01<span class="point"></span></div>
+            <div class="aboutUs__slogan-wrapper-text">
+              <div class="aboutUs__slogan-title">
+                Качественные материалы
+              </div>
+              <div class="aboutUs__slogan-description">
+                Надежные европейские материалы и качественная фирменная фурнитура(Blum, Hettich, Vibo, SCHŰCO, Boyard,
+                GTV)
+              </div>
+            </div>
+          </li>
+          <li class="aboutUs__slogan-item aboutUs__slogan">
+            <div class="aboutUs__slogan-num">01.</div>
+            <div class="aboutUs__slogan-wrapper-text">
+              <div class="aboutUs__slogan-title">
+                Качественные материалы
+              </div>
+              <div class="aboutUs__slogan-description">
+                Надежные европейские материалы и качественная фирменная фурнитура(Blum, Hettich, Vibo, SCHŰCO, Boyard,
+                GTV)
+              </div>
+            </div>
+          </li>
+          <li class="aboutUs__slogan-item aboutUs__slogan">
+            <div class="aboutUs__slogan-num">01.</div>
+            <div class="aboutUs__slogan-wrapper-text">
+              <div class="aboutUs__slogan-title">
+                Качественные материалы
+              </div>
+              <div class="aboutUs__slogan-description">
+                Надежные европейские материалы и качественная фирменная фурнитура(Blum, Hettich, Vibo, SCHŰCO, Boyard,
+                GTV)
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
