feat:add section blog

--- a/index.html
+++ b/index.html
@@ -252,18 +252,22 @@
         <h4 class="aboutUs__title">
           О нас
         </h4>
-      <div class="aboutUs__main">
+        <div class="aboutUs__main">
           <img src="./assets/img/png/shelves.png" class="aboutUs__main-img" alt="shelves">
           <div class="aboutUs__wrapper-desc">
             <img src="./assets/img/png/logo2.png" class="aboutUs__logo" alt="logo">
             <div class="aboutUs__wrapper-text">
-              <p class="aboutUs__tagline">Мы рады видеть Вас на нашем сайте. Хотим рассказать Вам немного про нашу компанию.</p>
-              <p class="aboutUs__tagline">Мы официальный представитель белорусских фабрик «Elegrum»,»Pan-Fasad»,»ЗОВ-Древ»,
+              <p class="aboutUs__tagline">Мы рады видеть Вас на нашем сайте. Хотим рассказать Вам немного про нашу
+                компанию.</p>
+              <p class="aboutUs__tagline">Мы официальный представитель белорусских фабрик
+                «Elegrum»,»Pan-Fasad»,»ЗОВ-Древ»,
                 «Термопрофиль»,»ЗОВ-фасад»,»ЗОВ-Спектр».</p>
-              <p class="aboutUs__tagline">Кухни на заказ Беларуси уже стал брендом сами по себе, ведь всем понятны преимущества: цена —
+              <p class="aboutUs__tagline">Кухни на заказ Беларуси уже стал брендом сами по себе, ведь всем понятны
+                преимущества: цена —
                 доступная, качество — высокое. Тому доказательство — отзывы наших покупателей, которые говорят: «Ваши
                 кухни выглядят намного дороже, чем стоят!».</p>
-              <p class="aboutUs__tagline">Мы уверены в фабриках, с которыми работаем, и за такое продолжительное время стали настоящими фанатами
+              <p class="aboutUs__tagline">Мы уверены в фабриках, с которыми работаем, и за такое продолжительное время
+                стали настоящими фанатами
                 своего дела.</p>
               <p class="aboutUs__tagline">
                 Миссия команды «BELONI» — дать каждому возможность покупать по-настоящему качественные вещи! Мы всегда
@@ -271,8 +275,8 @@
                 гарантийного срока:)</p>
             </div>
           </div>
-        </div> 
-         <ul class="aboutUs__slogans-list">
+        </div>
+        <ul class="aboutUs__slogans-list">
           <li class="aboutUs__slogan-item aboutUs__slogan">
             <div class="aboutUs__slogan-num">01<span class="point aboutUs-point"></span></div>
             <div class="aboutUs__slogan-wrapper-text">
@@ -309,8 +313,32 @@
               </div>
             </div>
           </li>
-
-        </ul> 
+        </ul>
+      </div>
+    </section>
+    <section class="blog">
+      <div class="container blog__container">
+        <h4 class="blog__title">
+          Блог
+        </h4>
+        <ul class="blog__cards">
+          <li class="blog__card">
+            <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
+            <p class="blog__card-date">1 июня 2024</p>
+            <p class="blog__card-desc">Какие критерии важны для оценки качества кухни?</p>
+          </li>
+          <li class="blog__card">
+            <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
+            <p class="blog__card-date">1 июня 2024</p>
+            <p class="blog__card-desc">Какие критерии важны для оценки качества кухни?</p>
+          </li>
+          <li class="blog__card">
+            <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
+            <p class="blog__card-date">1 июня 2024</p>
+            <p class="blog__card-desc">Какие критерии важны для оценки качества кухни?</p>
+          </li>
+        </ul>
+        <button class="button button__blog button-red">Показать ещё</button>
       </div>
     </section>
   </main>
