refactor: complete refactor index.html

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <section class="hero">
       <div class="container hero__container">
         <div class="hero__content">
+          <img class="hero__image" src="./assets/img/png/heroBg.png" alt="">
           <h1 class="hero__title">BELONI - кухни по вашему рецепту</h1>
           <ul class="hero__service-list">
             <li class="hero__service-item">Замеряем с максимальной точностью и соблюдаем все размеры при
@@ -106,7 +107,7 @@
             <li class="hero__service-item">Детально консультируем заказчиков по выбору материалов</li>
             <li class="hero__service-item">Разрабатываем наглядную визуализацию под каждый проект</li>
           </ul>
-          <button class="button hero__button">Перейти в каталог</button>
+          <button class="hero__button button">Перейти в каталог</button>
         </div>
         <div class="carousel">
           <ul class="carousel__categories">
@@ -147,7 +148,7 @@
         <div class="wrapper__carousel-work">
           <ul class="work-examples__cards">
             <li class="work-examples__card">
-              <img src="./assets/img/png/whiteKitchen.png" class="work-examples__card-img" alt="white kitchen">
+              <img src="./assets/img/png/white-kitchen.png" class="work-examples__card-img" alt="white kitchen">
               <p class="work-examples__card-description">Кухня с белыми рифлёными фасадами</p>
               <div class="work-examples__card-pricing">
                 <div class="cost__block">
@@ -161,7 +162,7 @@
               </div>
             </li>
             <li class="work-examples__card">
-              <img src="./assets/img/png/whiteKitchen.png" class="work-examples__card-img" alt="white kitchen">
+              <img src="./assets/img/png/white-kitchen.png" class="work-examples__card-img" alt="white kitchen">
               <p class="work-examples__card-description">Кухня с белыми рифлёными фасадами</p>
               <div class="work-examples__card-pricing">
                 <div class="cost__block">
@@ -175,7 +176,7 @@
               </div>
             </li>
             <li class="work-examples__card">
-              <img src="./assets/img/png/whiteKitchen.png" class="work-examples__card-img" alt="white kitchen">
+              <img src="./assets/img/png/white-kitchen.png" class="work-examples__card-img" alt="white kitchen">
               <p class="work-examples__card-description">Кухня с белыми рифлёными фасадами</p>
               <div class="work-examples__card-pricing">
                 <div class="cost__block">
@@ -189,7 +190,7 @@
               </div>
             </li>
             <li class="work-examples__card">
-              <img src="./assets/img/png/whiteKitchen.png" class="work-examples__card-img" alt="white kitchen">
+              <img src="./assets/img/png/white-kitchen.png" class="work-examples__card-img" alt="white kitchen">
               <p class="work-examples__card-description">Кухня с белыми рифлёными фасадами</p>
               <div class="work-examples__card-pricing">
                 <div class="cost__block">
@@ -208,18 +209,15 @@
         <button class="work-examples__button button">Показать еще</button>
       </div>
     </section>
-    <section class="readyKitchen">
-      <div class="container readyKitchen__container">
-        <div class="readyKitchen__content">
-          <button class="button discount__button">
+    <section class="ready-kitchen">
+      <div class="ready-kitchen__container container">
+        <div class="ready-kitchen__content">
+          <span class="ready-kitchen__discount">
             Экономия до 100 000 ₽!
-          </button>
-          <div class="readyKitchen__wrapper-text">
-            <h2 class="readyKitchen__title">Готовые кухни из салонов Beloni со скидкой!</h2>
-            <p class="readyKitchen__slogan">Приехал - Выбрал - Забрал!
-            </p>
-          </div>
-          <button class="button readyKitchen__button">Подробнее</button>
+          </span>
+          <h2 class="ready-kitchen__title">Готовые кухни из салонов Beloni со скидкой!</h2>
+          <p class="ready-kitchen__slogan">Приехал - Выбрал - Забрал!</p>
+          <button class="ready-kitchen__button button button--white">Подробнее</button>
         </div>
         <div class="carousel">
           <ul class="carousel__categories">
@@ -256,14 +254,13 @@
     </section>
     <section class="about">
       <div class="about__container container">
-        <h4 class="about__title">
+        <h2 class="about__title">
           О нас
-        </h4>
+        </h2>
         <div class="about__main">
-          <img src="./assets/img/png/shelves.png" class="about__main-img" alt="shelves">
-          <div class="about__wrapper-desc">
+          <img class="about__image" src="./assets/img/png/shelves.png" alt="">
+          <div class="about__info">
             <img src="./assets/img/png/logo2.png" class="about__logo" alt="logo">
-            <div class="about__wrapper-text">
               <p class="about__tagline">Мы рады видеть Вас на нашем сайте. Хотим рассказать Вам немного про нашу
                 компанию.</p>
               <p class="about__tagline">Мы официальный представитель белорусских фабрик
@@ -280,7 +277,6 @@
                 Миссия команды «BELONI» — дать каждому возможность покупать по-настоящему качественные вещи! Мы всегда
                 будем ответственны за ход исполнения Вашего заказа и останемся для Вас друзьями даже после окончания
                 гарантийного срока:)</p>
-            </div>
           </div>
         </div>
         <ul class="about__slogans-list">
@@ -314,10 +310,10 @@
       </div>
     </section>
     <section class="blog">
-      <div class="container blog__container">
-        <h4 class="blog__title">
+      <div class="blog__container container">
+        <h2 class="blog__title">
           Блог
-        </h4>
+        </h2>
         <ul class="blog__cards">
           <li class="blog__card">
             <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
@@ -332,10 +328,10 @@
           <li class="blog__card">
             <img src="./assets/img/png/redFlagKitchen.png" class="blog__card-img" alt="kitchen">
             <p class="blog__card-date">1 июня 2024</p>
-            <p class="blog__card-desc">Какие критерии важны для оценки качества кухни?</p>
+            <p class="blog__card-desc">Рецепт современной кухни</p>
           </li>
         </ul>
-        <button class="button button__blog button-red">Показать ещё</button>
+        <button class="blog__button button">Показать ещё</button>
       </div>
     </section>
   </main>
