fix: delete comments

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
         <div class="carousel">
           <ul class="carousel__categories">
-            <li class="category category--creamy ">
+            <li class="category category--creamy ready-kitchen--category">
               <span class="category__title category__title--big">Рассрочка и кредит</span>
               <img class="category__image" src="./assets/img/png/goldDrops.png" alt="">
               <button class="category__button button button--black button--icon">
@@ -233,7 +233,7 @@
                 </svg>
               </button>
             </li>
-            <li class="category category--grey-sky">
+            <li class="category category--grey-sky ready-kitchen--category">
               <span class="category__title category__title--big">Бесплатный 3D-проект </span>
               <img class="category__image" src="./assets/img/png/cornerKitchen.png" alt="">
               <button class="category__button button button--black button--icon">
@@ -243,7 +243,7 @@
                 </svg>
               </button>
             </li>
-            <li class="category category--creamy-beige">
+            <li class="category category--creamy-beige ready-kitchen--category">
               <span class="category__title category__title--big">Подарки клиентам</span>
               <img src="./assets/img/png/present.png" alt="">
               <button class="category__button button button--black button--icon">
@@ -265,7 +265,7 @@
         <div class="about__main">
           <img class="about__image" src="./assets/img/png/shelves.png" alt="">
           <div class="about__info">
-            <img src="./assets/img/png/logo2.png" class="about__logo" alt="logo">
+            <img src="./assets/img/svg/logo/logoBig.svg" class="about__logo" alt="logo">
             <p class="about__tagline">Мы рады видеть Вас на нашем сайте. Хотим рассказать Вам немного про нашу
               компанию.</p>
             <p class="about__tagline">Мы официальный представитель белорусских фабрик
