fix: correct pixel perfect to desctop version

--- a/index.html
+++ b/index.html
@@ -381,8 +381,7 @@
     <div class="container footer__container">
       <div class="footer__main-grid">
         <div class="footer__logo logo">
-          <!-- <img src="./assets/img/png/logoFooter.png" alt="logo" class="headr__logo footer__logo-img"> -->
-          <picture>
+          <picture class="footer--logo">
             <source media="(max-width: 1100px)" srcset="./assets/img/svg/logo/white.svg">
             <img src="./assets/img/svg/logo/logoAllWhite.svg" alt="logo" class="footer__logo-img">
           </picture>
@@ -500,7 +499,6 @@
   <div class="menu">
     <div class="container container__menu">
       <input type="text" class="input menu__header-input" placeholder="Что будем искать?">
-   
     <ul class="menu__list active">
       <li class="menu__item menu__item-catalog hide">Каталог<img src="./assets/img/png/triangle.png"
           class="triangle triangle-down" alt="ico triangle"></li>
