fix: add fixelPerfect to about

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="carousel">
           <ul class="carousel__categories">
-            <li class="category">
+            <li class="category hero--category">
               <span class="category__title">Каталог кухонь</span>
               <img class="category__image" src="./assets/img/png/sideKitchen1.png" alt="">
               <button class="category__button button button--black button--icon">
@@ -382,10 +382,9 @@
       <div class="footer__main-grid">
         <div class="footer__logo logo">
           <picture class="footer--logo">
-            <source media="(max-width: 1100px)" srcset="./assets/img/svg/logo/white.svg">
+            <source media="(max-width: 430px)" srcset="./assets/img/svg/logo/white.svg">
             <img src="./assets/img/svg/logo/logoAllWhite.svg" alt="logo" class="footer__logo-img">
           </picture>
-
         </div>
         <p class="footer__recommendation-text">Подписывайтесь на наши обновления
         </p>
