--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="body">
-  <header class="header">
+  <!-- <header class="header">
     <div class="header__menu">
       <div class="container header__menu-container">
         <div class="wrapper-location-nav">
@@ -376,7 +376,7 @@
         </div>
       </div>
     </section>
-  </main>
+  </main> -->
   <footer class="footer">
     <div class="container footer__container">
       <div class="footer__main-grid">
