--- a/product.html
+++ b/product.html
@@ -28,7 +28,7 @@
                   <path d="M13.7071 8.70711C14.0976 8.31658 14.0976 7.68342 13.7071 7.29289L7.34315 0.928932C6.95262 0.538408 6.31946 0.538408 5.92893 0.928932C5.53841 1.31946 5.53841 1.95262 5.92893 2.34315L11.5858 8L5.92893 13.6569C5.53841 14.0474 5.53841 14.6805 5.92893 15.0711C6.31946 15.4616 6.95262 15.4616 7.34315 15.0711L13.7071 8.70711ZM0 9L13 9V7L0 7L0 9Z" fill="#232323"/>
                   </svg>
               </button>
-              <button class="slider__favorite">❤</button>
+              <button class="slider__favorite favorite">❤</button>
             </div>
             <ul class="slider__list">
               <li class="slider__item"><img src="./assets/img/png/product-img-2.png" alt=""></li>
